BJS2-16939 revised